# paper_reimpl

./: .gitignore  AGENTS.md  LICENSE  README.md  requirements-dev.txt
docs/: LAB_SERVER_BACKEND.md  PIPELINE.md  (+3 more)
papers/01_fontdiffuser/: pyproject.toml
papers/01_fontdiffuser/paper_notes/: 01.md
papers/01_fontdiffuser/reports/: blind_impl.md  code_review_blind.md  dl_review_blind.md  github_diff.md  stage_a_shakedown.md  stage_a_shakedown_log.txt  stage_a_ttf_v1.md  stage_a_ttf_v1_log.txt  ttf_supported_chars_128px_0.85.json
papers/01_fontdiffuser/scripts/: run_01_sample_stage_a_v1_gpu0.bat  run_01_sample_stage_a_v3_gpu0.bat  run_01_stage_a_shakedown_gpu0.bat  run_01_stage_a_ttf_v1_gpu0.bat  run_01_stage_a_ttf_v3_gpu0.bat  run_01_stage_b_gpu0.bat  run_01_stage_b_gpu1.bat  run_01_stage_b_long_gpu0.bat  run_01_stage_b_long_gpu1.bat  sample_stage_a_v1.py  sample_stage_b_ernantang.py
papers/01_fontdiffuser/src/fontdiffuser/: __init__.py  dataset.py  model.py  sample.py  train.py
papers/01_fontdiffuser/tests/: test_smoke.py  test_ttf_dataset_smoke.py
papers/02_hfh_font/: pyproject.toml
papers/02_hfh_font/paper_notes/: 02.md
papers/02_hfh_font/reports/: blind_impl.md  code_review_blind.md  dl_review_blind.md  github_diff.md  stage_a_shakedown.md
papers/02_hfh_font/scripts/: pretrain_vae.py  run_02_chain_vae_v2_stage_a_v3_gpu1.bat  run_02_sample_stage_a_ttf_v1_gpu1.bat  run_02_sample_stage_a_ttf_v2_gpu1.bat  run_02_sample_stage_a_ttf_v3_cpu.bat  run_02_sample_stage_a_ttf_v4_gpu0.bat  run_02_sample_stage_a_ttf_v5_gpu0.bat  run_02_stage_a_shakedown_gpu1.bat  run_02_stage_a_ttf_v1_gpu1.bat  run_02_stage_a_ttf_v2_gpu1.bat  run_02_stage_a_ttf_v3_gpu1.bat  run_02_stage_a_ttf_v4_gpu0.bat  run_02_stage_a_ttf_v4_gpu1.bat  run_02_stage_a_ttf_v5_gpu0.bat  run_02_stage_b_gpu0.bat  run_02_stage_b_long_gpu0.bat  run_02_stage_b_long_gpu1.bat  run_02_vae_pretrain_gpu1.bat  run_02_vae_pretrain_v2_gpu1.bat  sample_stage_a_ttf_v1.py  sample_stage_b_ernantang.py
papers/02_hfh_font/src/hfh_font/: __init__.py  dataset.py  model.py  sample.py  train.py
papers/02_hfh_font/tests/: test_smoke.py  test_ttf_dataset_smoke.py
papers/03_if_font/: pyproject.toml
papers/03_if_font/paper_notes/: 03.md
papers/03_if_font/reports/: blind_impl.md  code_review_blind.md  dl_review_blind.md  github_diff.md
papers/03_if_font/scripts/: pretrain_vqgan.py  run_03_pretrain_vqgan_gpu0.bat  run_03_sample_stage_a_ttf_v2_cpu.bat  run_03_stage_a_ttf_v1_gpu0.bat  run_03_stage_a_ttf_v1_gpu1.bat  run_03_stage_a_ttf_v2_gpu0.bat  run_03_stage_a_ttf_v2_gpu1.bat  sample_stage_a_ttf_v2.py
papers/03_if_font/src/if_font/: __init__.py  dataset.py  ids.py  losses.py  model.py  sample.py  train.py
papers/03_if_font/tests/: test_smoke.py
papers/04_vq_font/: pyproject.toml
papers/04_vq_font/paper_notes/: 04.md
papers/04_vq_font/reports/: blind_impl.md  code_review_blind.md  dl_review_blind.md  github_diff.md
papers/04_vq_font/scripts/: run_04_chain_vqgan_transformer_v3_gpu1.bat  run_04_stage_a_ttf_v1_gpu0.bat  run_04_stage_a_ttf_v1_gpu1.bat  run_04_stage_a_ttf_v2_gpu0.bat  run_04_stage_a_ttf_v2_gpu1.bat  run_04_stage_b_gpu0.bat  run_04_stage_b_long_gpu0.bat  run_04_stage_b_long_gpu1.bat  sample_stage_a_ttf_v2.py  sample_stage_b_ernantang.py
papers/04_vq_font/src/vq_font/: __init__.py  dataset.py  model.py  sample.py  train.py  transformer.py  vqgan.py  vqgan_loss.py
papers/04_vq_font/tests/: test_smoke.py
papers/05_qt_font/: pyproject.toml
papers/05_qt_font/paper_notes/: 05.md
papers/05_qt_font/reports/: blind_impl.md  code_review_blind.md  dl_review_blind.md  github_diff.md
papers/05_qt_font/scripts/: run_05_stage_a_ttf_v1_gpu0.bat  run_05_stage_a_ttf_v1_gpu1.bat  run_05_stage_a_ttf_v2_gpu0.bat  run_05_stage_a_ttf_v2_gpu1.bat  run_05_stage_b_gpu0.bat  run_05_stage_b_gpu1.bat  sample_stage_a_ttf_v2.py  sample_stage_b_ernantang.py
papers/05_qt_font/src/qt_font/: __init__.py  dataset.py  losses.py  model.py  octree.py  sample.py  train.py
papers/05_qt_font/tests/: test_smoke.py
papers/06_calliffusion/: pyproject.toml
papers/06_calliffusion/paper_notes/: 06.md
papers/06_calliffusion/reports/: blind_impl.md  code_review_blind.md  dl_review_blind.md  github_diff.md
papers/06_calliffusion/scripts/: run_06_stage_a_ttf_v1_gpu0.bat  run_06_stage_a_ttf_v1_gpu1.bat  run_06_stage_a_ttf_v2_gpu0.bat  run_06_stage_a_ttf_v2_gpu1.bat  sample_stage_a_ttf_v2.py
papers/06_calliffusion/src/calliffusion/: __init__.py  dataset.py  lora.py  model.py  sample.py  text.py  train.py
papers/06_calliffusion/tests/: test_smoke.py
papers/07_moyun/: pyproject.toml
papers/07_moyun/paper_notes/: 07.md
papers/07_moyun/reports/: blind_impl.md  code_review_blind.md  dl_review_blind.md  github_diff.md
papers/07_moyun/src/moyun/: __init__.py  dataset.py  mamba_block.py  model.py  sample.py  train.py
papers/07_moyun/tests/: test_smoke.py
papers/08_dp_font/: pyproject.toml
papers/08_dp_font/paper_notes/: 08.md
papers/08_dp_font/reports/: blind_impl.md  code_review_blind.md  dl_review_blind.md  github_diff.md
papers/08_dp_font/scripts/: run_08_sample_fixed_source_gpu0.bat  run_08_sample_stage_b_ernantang_cpu.bat  run_08_sample_stage_b_gpu1.bat  run_08_stage_a_ttf_v1_gpu0.bat  run_08_stage_a_ttf_v1_gpu1.bat  run_08_stage_a_ttf_v2_gpu0.bat  run_08_stage_a_ttf_v2_gpu1.bat  run_08_stage_a_ttf_v3_gpu0.bat  run_08_stage_b_extra_extra_long_gpu1.bat  run_08_stage_b_extra_long_gpu1.bat  run_08_stage_b_gpu0.bat  run_08_stage_b_gpu1.bat  run_08_stage_b_long_gpu1.bat  run_08_stage_b_long_pinn0_gpu1.bat  run_08_stage_b_pinn0_gpu0.bat  sample_08_fixed_source.py  sample_stage_a_ttf_v2.py  sample_stage_b_ernantang.py
papers/08_dp_font/src/dp_font/: __init__.py  dataset.py  model.py  pinn_losses.py  sample.py  train.py
papers/08_dp_font/tests/: test_smoke.py
shared/: pyproject.toml
shared/src/paper_reimpl_shared/: __init__.py  config.py
shared/src/paper_reimpl_shared/data/: content_cache.py  legacy.py  manifest.py  sampling.py  ttf_pair_dataset.py  ttf_renders.py
shared/tests/: test_manifest_enrichment_sampling.py
(+139 files in other folders)
