[project]
name = "paper-reimpl-shared"
version = "0.1.0"
description = "Cross-paper shared utilities for diffusion paper reimplementations"
authors = [{name = "Ayueh"}]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "einops>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_reimpl_shared"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
