[project]
name = "fontdiffuser-reimpl"
version = "0.1.0"
description = "Blind reimplementation of FontDiffuser (AAAI 2024) — Phase 1 worker"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",        # DeformConv2d (RSI) + pretrained VGG-16 (perceptual / SCR)
    "kornia>=0.7",              # RandomResizedCrop positive augmentation for SCR
    "info-nce-pytorch>=0.1.4",  # InfoNCE(temperature=0.07, negative_mode='paired')
    "paper-reimpl-shared",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "pytest>=8.0",
]

[tool.uv.sources]
paper-reimpl-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fontdiffuser"]
