[project]
name = "hfh_font-reimpl"
version = "0.1.0"
description = "Blind Phase-1 reimplementation of HFH-Font (SIGGRAPH-Asia 2024)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "paper-reimpl-shared",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "einops>=0.7",
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[tool.uv.sources]
paper-reimpl-shared = { path = "../../shared", editable = true }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hfh_font"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
