[project]
name = "if_font-reimpl"
version = "0.1.0"
description = "Blind reimplementation of IF-Font (NeurIPS 2024) — IDS + VQ tokens + AR Transformer"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "paper-reimpl-shared",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "pytest>=8.0",
]

[tool.uv.sources]
paper-reimpl-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/if_font"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
