[project]
name = "vq_font-reimpl"
version = "0.1.0"
description = "Blind reimplementation of VQ-Font (AAAI 2023) — Phase 1 worker"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "paper-reimpl-shared",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "pytest>=8.0",
    # Phase 2 (post-github_diff): Stage 0 uses VQLPIPSWithDiscriminator.
    # `lpips` ships pretrained VGG weights via torch.hub on first import.
    # Falls back to a placeholder if neither lpips nor torchmetrics[image]
    # is installed (see src/vq_font/vqgan_loss.py:_LpipsWrapper).
    "lpips>=0.1.4",
]

[tool.uv.sources]
paper-reimpl-shared = { path = "../../shared", editable = true }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vq_font"]
