[project]
name = "qt_font-reimpl"
version = "0.1.0"
description = "Blind reimplementation — Phase 1 worker will fill in deps"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "paper-reimpl-shared",
    # Phase 1 worker: add paper-specific deps here
]

[tool.uv.sources]
paper-reimpl-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qt_font"]
